--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -1,17 +1,17 @@
 <div class="container">
   <h2><b>Top Courses</b></h2>
 
-  <div class=" content-section implementation carousel-demo">
-    <div class="card">
+  <div class=" content-section implementation " style="border: 2px solid transparent; height: 300px;">
+    <div class="card" style="height:300px">
       <p-carousel [value]="courses" styleClass="custom-carousel" [numVisible]="5" [numScroll]="6" [circular]="true"
         [autoplayInterval]="0" [responsiveOptions]="responsiveOptions">
         <ng-template let-course pTemplate="item">
           <div class="item card">
-            <img src="{{course.thumbnailUrl}} " class="card-img-top" alt="...">
+            <!-- <img src="{{course.thumbnailUrl}} " class="card-img-top" alt="..."> -->
+            <img src="assets/images/Business.png " class="card-img-top" alt="...">
             <div class="card-body" >
               <h4 class="card-title">{{course.title}}</h4>
-              <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="openModal(course.courseId)">Details</button> -->
-              <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="openModal(course.courseId)">Details</button>
+              <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="openModal(course.courseId)" style="margin-bottom: 0;">Details</button>
             </div>
           </div>
         </ng-template>
