--- a/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.css
@@ -1,8 +1,9 @@
 .navbar{
-    position:relative ;
+    position:fixed ;
     z-index: 9;
     width: 100%;
     top:0;
+    ;
     
 }
 .navbar-brand{
