--- a/Angular-Components/UpSkillUi/src/app/components/course-list/course-list.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/course-list/course-list.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-3 box" style="margin:auto;margin-top: 2%;" *ngFor="let c of courses_list">
     <div class="row g-0">
         <div class="col-md-2 img-container">
-            <img src="assets/images/{{c.thumbnailUrl}}" class="img-fluid rounded-start" alt="...">
+            <img src="{{c.thumbnailUrl}}" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-6 detail-container">
             <div class="card-body">
