--- a/Angular-Components/UpSkillUi/src/app/components/profile/profile.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/profile/profile.component.html
@@ -147,7 +147,7 @@
                   <p class="mb-4"><span class="text-primary font-italic me-1">Enrolled Courses</span> Project Status
                   </p>
                   <div *ngFor="let e of enrolledCourses">
-                  <p class="mb-1 mt-4" style="font-size: .77rem;">{{e.title}}</p>
+                  <a href="course-page/{{e.courseId}}" class="course-title"><p class="mb-1 mt-4" style="font-size: .77rem;">{{e.title}}</p></a>
                   <div class="progress rounded" style="height: 5px;">
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
                       aria-valuemin="0" aria-valuemax="100"></div>
