--- a/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
@@ -45,9 +45,9 @@
                 <div><input class="login-text" type="submit" value="Log In" /></div>
     
                 <!-- <a href="#">Forget Password<br /> </a> -->
-                <div class="text-center">
+                <div class="text-center" id="sign-up">
                     <!-- <button class="btn btn-secondary btn-sm" style="color:white;background-color:#59238F;">Sign-Up</button> -->
-                    <a href="sign-up" style="font-style:italic;color:white;font-weight:400">Don't have an account?Sign Up</a>
+                    <a href="sign-up"  style="font-style:italic;color:rgb(42, 37, 37);font-weight:400">Don't have an account? Sign Up</a>
                 </div>
             </div>
         </form>
