--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -11,7 +11,7 @@
           <div class="item card">
             <img src="{{course.thumbnailUrl}} " class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column" >
-              <h4 class="card-title">{{course.title}}</h4>
+              <h5 class="card-title"><b>{{course.title}}</b></h5>
               <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="openModal(course.courseId)">Details</button> -->
               <button type="button" class="mt-auto btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="openModal(course.courseId)">Details</button>
             </div>
